--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 </head> 
 <body>
     <div class="container">
-        <span class="text1">Weather App</span>
-        <span class="text2">- Anmol Singh Rana</span>
+        <span class="text1"></span>
+        <span class="text2"></span>
  
      </div>
        
